<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="_0_0">0.0</string>
    <string name="_1487_2000_kcal">1487/2000 kcal</string>
    <string name="_540_kcal">540 kcal</string>
    <string name="_564_kcal">564 kcal</string>
    <string name="_762_kcal">762 kcal</string>
    <string name="BTBookLessons">Book Lessons</string>
    <string name="BTChat">Chat</string>
    <string name="BTFilter">Filter</string>
    <string name="BTMore">More</string>
    <string name="Btn168Method">16/8 Method</string>
    <string name="Btn52Diet">5:2 Diet</string>
    <string name="BtnAdd">+</string>
    <string name="BtnCheck">Check</string>
    <string name="BtnComplete">Complete</string>
    <string name="BtnDoneEdit">Done Edit</string>
    <string name="BtnEatStop">Eat-Stop-Eat</string>
    <string name="BtnEdit">Edit</string>
    <string name="BtnEditStart">Edit start</string>
    <string name="BtnEnd">End fast</string>
    <string name="BtnPause">Pause fast</string>
    <string name="BtnRemove">-</string>
    <string name="BtnReset">Reset</string>
    <string name="BtnResume">Resume fast</string>
    <string name="BtnStart">Start fast</string>
    <string name="BtnStrTrain">Strength Training</string>
    <string name="BtnYoga">Yoga and stretching</string>
    <string name="CDArrowRight">Image of an arrow facing right</string>
    <string name="CDCalculator">Image of a calculator</string>
    <string name="CDCalendar">Image of a calendar</string>
    <string name="CDDownArrow">Image of a downward arrow</string>
    <string name="CDDumbbell">Image of several dumbbells</string>
    <string name="CDMan">Image of a man</string>
    <string name="CDManEat">Image of a man eating</string>
    <string name="CDManWoman">Image of a man and a woman</string>
    <string name="CDPayment">Image of a credit card</string>
    <string name="CDPlanner">Image of a notebook</string>
    <string name="CDPlus">plus button</string>
    <string name="CDSpinner">spinner</string>
    <string name="CDTracker">Image of a hand holding a pen</string>
    <string name="CDWoman">Image of a woman</string>
    <string name="CDWoman2">A woman doing yoga on a mat</string>
    <string name="CDWoman3">Image of a woman doing plank</string>
    <string name="CDWoman4">Image of a woman holding pancake and spatula</string>
    <string name="CDYoga">A women doing the crusher on a yoga mat</string>
    <string name="Done">Done</string>
    <string name="ETHintHrMinSec">hr:min:sec</string>
    <string name="ETPhone">Phone</string>
    <string name="ETRowIndex">Enter row number</string>
    <string name="EditButton">Edit Profile</string>
    <string name="Forgot">Forgot Password?</string>
    <string name="HintTypeHere">type here</string>
    <string name="Home">Home</string>
    <string name="IVEgg">egg</string>
    <string name="IVIndicator">colored_indicator</string>
    <string name="IVIceCream">ice cream</string>
    <string name="IVRamen">ramen</string>
    <string name="IVStarMedal">Star medal</string>
    <string name="Login">Log In</string>
    <string name="LoginDesc">Let’s get to tracking progress and plan ahead.</string>
    <string name="Logout">Logout</string>
    <string name="Manage">Manage Profile</string>
    <string name="Manage_payment">Manage payment</string>
    <string name="Manage_paymentdesc">Credit/debit card, e-Wallet…</string>
    <string name="ProgressActivity">Run 2km</string>
    <string name="RBActive">Active\n(5x+ per week)</string>
    <string name="RBGain">Gain</string>
    <string name="RBLoss">Loss</string>
    <string name="RBMaintain">Maintain</string>
    <string name="RBModerate">Moderate\n(3x - 4x per week)</string>
    <string name="RBSedentary">Sedentary\n(no exercises)</string>
    <string name="TBDiet">Diet Planner</string>
    <string name="TBExercise">Exercise Planner</string>
    <string name="TBFasting">Fasting Planner</string>
    <string name="TIBMIMacro">BMI &amp; Macro</string>
    <string name="TICalorie">Calorie</string>
    <string name="TIDiet">Diet</string>
    <string name="TIExercise">Exercise</string>
    <string name="TIFasting">Fasting</string>
    <string name="TIFinder">Professional Help Finder</string>
    <string name="TIFood">Manage Food Inventory</string>
    <string name="TIHeight">Height (cm)</string>
    <string name="TILesson">Lesson Booking</string>
    <string name="TILocator">Gym Locator</string>
    <string name="TIProgress">Progress Tracker</string>
    <string name="TIReward">Earn Reward Points</string>
    <string name="TIWeight">Weight (kg)</string>
    <string name="TVAge">Age</string>
    <string name="TVAmount">Amount</string>
    <string name="TVBreakfast">Breakfast\t\t\t\t\t\t0 kcal</string>
    <string name="TVCarbs">Carbs</string>
    <string name="TVChooseEWallet3">Preferred E-wallet</string>
    <string name="TVCircularTotal">Total\n\n\nkcal</string>
    <string name="TVCongratulate">Well done!\nKeep it up!</string>
    <string name="TVCycle">Cycling</string>
    <string name="TVDate">5 December 2022</string>
    <string name="TVDay">Monday</string>
    <string name="TVDescPro1">\u25CF  NASM Certified Trainer\n\u25CF  Helps find the right exercise for you based on your fitness level</string>
    <string name="TVDescPro2">\u25CF  HITT Certified Trainer\n\u25CF  Advises on the focus on training different muscle groups</string>
    <string name="TVDescPro3">\u25CF  Nutrition specialist\n\u25CF  Dietary assessment to provide the best nutrition intake for you!</string>
    <string name="TVDescTrainer1">\u25CF  NASM Certified Trainer\n\u25CF  Specialises in endurance and toning</string>
    <string name="TVDescTrainer2">\u25CF  HITT Certified Trainer\n\u25CF  High intensity workout to lose calories in a short period of time</string>
    <string name="TVDescTrainer3">\u25CF  ISSA Certified Trainer\n\u25CF  Help client get stronger with less pain or injury\n\u25CF  Focus on building muscle volume</string>
    <string name="TVDinner">Dinner\t\t\t\t\t0 kcal</string>
    <string name="TVDone">Done</string>
    <string name="TVDuration">Duration (days)</string>
    <string name="TVEstiBurn">Estimated Burnt Calories:</string>
    <string name="TVExCourse">Exercise Courses:</string>
    <string name="TVFat">Fat</string>
    <string name="TVFood">Food</string>
    <string name="TVGender">Gender</string>
    <string name="TVGrabPay">GrabPay</string>
    <string name="TVGrocery">Grocery List:</string>
    <string name="TVGymNear">Gyms near you:</string>
    <string name="TVGymRepresent">represents a gym</string>
    <string name="TVHeight">Height</string>
    <string name="TVHello">Hello,</string>
    <string name="TVHome">User</string>
    <string name="TVHomeGo">Go to</string>
    <string name="TVHomedesc">Begin your diet journey right away with our functions.</string>
    <string name="TVJog">Jogging</string>
    <string name="TVLatest">Latest news</string>
    <string name="TVListRecipe">List of Recipes</string>
    <string name="TVLunch">Lunch\t\t\t\t\t\t0 kcal</string>
    <string name="TVMacroScore">Your daily macro goals</string>
    <string name="TVMore1">\u25CF  NASM Certified Trainer\n\u25CF  Specialises in endurance and toning\n\u25CF  Custom lesson planning ofr each individual based on their needs\n\u25CF  Guaranteed results in 3 months!\n\u25CF  RM60/hour\n\u25CF  Lessons are from 2pm till 4pm Malaysian Time\n\u25CF  Location is based at StarGym</string>
    <string name="TVMornSnack">Morning snack\t\t\t\t\t0 kcal</string>
    <string name="TVNewsDesc">Healthy Diet - WHO</string>
    <string name="TVPerCalories">/2000 kcal</string>
    <string name="TVPlan">Exercise Plan:</string>
    <string name="TVPracticeFast">Intermittent Fasting Practice:</string>
    <string name="TVPro1">Adam Smith</string>
    <string name="TVPro2">Timothy Skartin</string>
    <string name="TVPro3">Sarah Fierro</string>
    <string name="TVProfileInfo">Profile info</string>
    <string name="TVProtein">Protein</string>
    <string name="TVRecipe">Recipe Recommendation</string>
    <string name="TVRewardActivity">Reward Activity:</string>
    <string name="TVStatusFast">You\'re fasting!</string>
    <string name="TVStatusTitle">Status:</string>
    <string name="TVSwim">Swimming</string>
    <string name="TVTable3TitleName">Name</string>
    <string name="TVTable3TitleTime">Duration (min)</string>
    <string name="TVTableDayF">Fri</string>
    <string name="TVTableDayM">Mon</string>
    <string name="TVTableDayS">Sat</string>
    <string name="TVTableDaySu">Sun</string>
    <string name="TVTableDayT">Tue</string>
    <string name="TVTableDayTh">Thu</string>
    <string name="TVTableDayW">Wed</string>
    <string name="TVTableTitleBF">Breakfast</string>
    <string name="TVTableTitleD">Dinner</string>
    <string name="TVTableTitleL">Lunch</string>
    <string name="TVTargetBurn">Target Calorie Burnt:</string>
    <string name="TVTimeColon">:</string>
    <string name="TVTitleEnd">Ending</string>
    <string name="TVTitleStart">Started</string>
    <string name="TVToday">Today\'s plan:</string>
    <string name="TVTrainer1">Malcolm Stande</string>
    <string name="TVTrainer2">Lufti Serwing</string>
    <string name="TVTrainer3">Megan Zetlzin</string>
    <string name="TVUnitKcal">kcal</string>
    <string name="TVWeekly">Weekly diet plan:</string>
    <string name="TVWeight">Weight</string>
    <string name="about">About</string>
    <string name="aboutdesc" tools:ignore="Typos">Our app aims to help you with all needs related to health! Wanna lose some weight? Wanna gain some muscle? Wondering what to do next to achieve your health goals? We\'ve got you covered!</string>
    <string name="activity_level">Activity Level:</string>
    <string name="address">Address</string>
    <string name="age">Age</string>
    <string name="agree">Agree with</string>
    <string name="already_have">I already have an account</string>
    <string name="ans1">Our app offers various functionalities to help you along your journey of achieving your health goals! Do try out all of them!</string>
    <string name="ans2">Most of our functionalities are completely free! However, there are some that will require you to pay a fee.</string>
    <string name="ans3">Don\'t worry! Our app stores your data securely using Firebase.</string>
    <string name="ans4">This application was developed by 5 university students!</string>
    <string name="app_name">Healthier_App</string>
    <string name="bread">bread</string>
    <string name="breakfast">Breakfast</string>
    <string name="burnt">Burnt</string>
    <string name="calculate">Calculate</string>
    <string name="calculator">Calculator</string>
    <string name="calories">Calories</string>
    <string name="coaching">Coaching</string>
    <string name="contact_info">derrickphb@gmail.com\nfrostedluna99@gmail.com\nchuwei1100@gmail.com\nnisyaqanita@gmail.com</string>
    <string name="customer_serv">Customer Service</string>
    <string name="customer_servdesc">For any inquiries, contact us here!</string>
    <string name="edit_profile">Edit profile</string>
    <string name="edit_profiledesc">Username, Phone, Address, Password…</string>
    <string name="faq">FAQ</string>
    <string name="help">Help</string>
    <string name="helpdesc">About, FAQ, Customer service…</string>
    <string name="planner">Planner</string>
    <string name="ques1">What can I use this app for?</string>
    <string name="ques2">Will I get charged by this app?</string>
    <string name="ques3">How is my data stored?</string>
    <string name="ques4">Who developed this app?</string>
    <string name="sample_name">Ariana Venti</string>
    <string name="sample_username">\@username</string>
    <string name="settings">Settings</string>
    <string name="tracker">Tracker</string>
    <string name="user_info">User info</string>
    <string name="user_infodesc">Name, Age, Gender, Height, Weight…</string>
</resources>