<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/DestBMIMacro"
        android:icon="@drawable/calculator_icon"
        android:title="@string/calculator" />

    <item
        android:id="@+id/nav_planner"
        android:icon="@drawable/planner_icon"
        android:title="@string/planner" />

    <item
        android:id="@+id/DestProgress"
        android:icon="@drawable/tracker_icon"
        android:title="@string/tracker" />

    <item
        android:id="@+id/DestFinder"
        android:icon="@drawable/coach_icon"
        android:title="@string/coaching" />

    <item
        android:id="@+id/DestSettings"
        android:icon="@drawable/settings_icon"
        android:title="@string/settings" />
</menu>